Make sure labels wrap nicely and all boxes remain the same height when they do

--- a/app/assets/sass/components/_status-card.scss
+++ b/app/assets/sass/components/_status-card.scss
@@ -104,4 +104,7 @@ $statuses: (
 
 .status-card__type {
   text-decoration: underline;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
